--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -4,6 +4,19 @@
     background-color: #2e2d2d;
     display: flex;
     flex-direction: row;
+    z-index: 100;
+    top: 0;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+  }
+  
+  .navbar button {
+    background-color: transparent;
+    border: none;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+    font-size: 24px;
   }
   
   .navbar .levaStrana {
@@ -33,71 +46,29 @@
     font-size: 20px;
   }
   
-  .navbar .desnaStrana button {
-    background-color: transparent;
-    border: none;
-    color: rgb(65, 47, 47);
-    cursor: pointer;
-  }
-  
-  .navbar .desnaStrana svg {
-    font-size: 40px;
-  }
-  
-  .navbar #open {
-    padding-left: 0px;
-  }
-  .navbar #open img {
-    display: none;
-  }
-  
-  .navbar #close img {
-    display: inherit;
-  }
-  
-  .navbar #open .hiddenLinks {
-    display: inherit;
-    margin-left: 30px;
-  }
-  
-  .navbar #close .hiddenLinks {
-    display: none;
-  }
-  
-  .navbar #open a {
-    width: 70px;
-    margin: 5px;
-  }
-  @media only screen and (max-width: 900px) {
-    .navbar .desnaStrana a {
-      width: 70px;
-    }
-    .navbar .levaStrana {
-      padding-left: 50px;
-    }
-  }
-  
   @media only screen and (max-width: 600px) {
-    .navbar .desnaStrana a {
-      display: none;
+    .navbar a {
+      white-space: nowrap; 
+      overflow: hidden; 
+      text-overflow: ellipsis; 
     }
   
     .navbar .desnaStrana {
       justify-content: flex-end;
-      padding-right: 50px;
+    }
+  
+    .navbar .hiddenLinks {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      position: absolute;
+      top: 80px;
+      right: 20px;
+      background-color: #2e2d2d;
+      padding: 10px;
     }
   
     .navbar .desnaStrana button {
-      display: inherit;
-    }
-  }
-  
-  @media only screen and (min-width: 600px) {
-    .navbar .desnaStrana button {
-      display: none;
-    }
-  
-    .hiddenLinks {
-      display: none;
+      margin-left: auto;
     }
   }
