--- a/client/src/styles/cart.css
+++ b/client/src/styles/cart.css
@@ -1,43 +1,32 @@
-.cart {
+.cart{
+    width: 100%;
+    height: 90vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .cartItem {
-    width: 700px;
-    height: 250px;
-    display: flex;
-  
-    align-items: center;
-    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-    border-radius: 25px;
-    margin: 30px;
-  }
-  
-  .cartItem img {
-    width: 200px;
-  }
-  
-  .cartItem .description {
-    width: 100%;
-    font-size: 30px;
-  }
-  
-  .countHandler input {
-    width: 40px;
-    text-align: center;
-    font-weight: bolder;
-  }
-  
-  .checkout button {
-    width: 150px;
-    height: 50px;
-    background-color: rgb(19, 19, 19);
-    color: white;
+    justify-content: baseline;
+}
+
+.cart button{
+    background-color: transparent;
+    color: #8f8f8f;
+    margin: 150px;
+    padding: 5px;
+    width: 140px;
+    height: 40px;
     border: none;
-    border-radius: 8px;
-    margin: 10px;
+    background-color: #1a2125;
+    color: whitesmoke;
+    font-size: 15px;
     cursor: pointer;
-  }
+    justify-self: center;
+    transition: color 0.3s ease-in-out;
+    border-radius: 8px;
+}
+.cart h1{
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+  "Lucida Sans", Arial, sans-serif;
+  font-weight: 10;
+  font-size: 50px;
+  margin-left: 30px;
+}
+
